<resources>
    <string name="app_name">calcular Figuras</string>
    <string name="cuadro">Cuadrado</string>
    <string name="triangulo">Triángulo</string>
    <string name="cubo">Cubo</string>
    <string name="circulo">Círculo</string>
    <string name="titulo">Calculadora Figuras Geométricas</string>
    <string name="base">Valor de la Base</string>
    <string name="radio">Radio del Círculo</string>
    <string name="lado">Valor del Lado</string>
    <string name="calcular">Calcular</string>
    <string name="texto">Calculadora de Figuras Geométricas</string>
    <string name="altura">Altura</string>
    <string name="descripcion">Esta aplicación calcula los valores de la áreas y perímetros del círculo,
        el cuadrado y triángulo rectángulo.   En el caso del cubo,se calcula el área de cada cara y luego
        se suman.</string>
    <string name="select">Seleccione una opción</string>
</resources>
